--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
 	<% }else{ %>
 		<form action="/" method="POST">
 			<div class="form-group">
-				<label for="url">Enter Your URL!!!</label>
+				<label for="url">Enter Your URL Here!!!</label>
 				<input type="text" name="url" id="url" class="form-control" required placeholder="Enter URL here..">
 			</div>
 			<div class="form-group text-center">
